# ascend-profiling-web

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/ascend-profiling-analyze/: .SKILL.md.swp  CLAUDE.md  SKILL.md
.claude/skills/ascend-profiling-analyze/references/: advisor-detail.md  cluster-analyse-detail.md  compare-tools-detail.md  msprof-analyze-detail.md  visualization-tools-detail.md
.claude/skills/ascend-profiling-analyze/scripts/: analyze_profiling.py  search_playbooks.py
.claude/skills/ascend-profiling-collect/: CLAUDE.md  SKILL.md
.claude/skills/ascend-profiling-collect/assets/: AccPMU(加速器带宽及并发信息).md  StarsChipTrans(片间传输带宽信息).md  StarsSocInfo(SoC传输带宽信息).md  ai_core_utilization(AICore指令占比).md  ai_cpu_pmu_events(AICPUPMU事件).md  ai_cpu_top_function(AICPU热点函数).md  ai_vector_core_utilization(AIVectorCore指令占比).md  aicpu(AICPU算子详细耗时).md  aicpu_mi(数据准备的队列).md  api_statistic(API耗时统计信息).md  communication_statistic(集合通信算子统计信息).md  dp(数据增强信息).md  (+40 more)
app/: config.py  database.py  main.py  models.py
app/analysis/: analyze_profiling.py  parse_comm_stats.py  parse_op_summary.py  parse_step_trace.py
app/routers/: jobs.py  pages.py  perfetto_proxy.py  questions.py  report.py  swimlane.py  trace.py  upload.py
app/services/: analyzer.py  cleanup.py  job_manager.py  swimlane_builder.py  unpacker.py
app/templates/: base.html  index.html  questions.html  report.html
scripts/: download_perfetto.sh
static/css/: style.css
static/js/: perfetto.js  questions.js  report.js  swimlane.js  theme.js  upload.js
(+16 files in other folders)
